--- a/app/src/main/res/layout/request_item.xml
+++ b/app/src/main/res/layout/request_item.xml
@@ -15,104 +15,121 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:baselineAligned="true"
-            android:orientation="horizontal">
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+            <TextView
+                android:id="@+id/tvReqBarcode"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                android:drawableLeft="@drawable/twotone_qr_code_24"
+                android:drawablePadding="10dp"
+                android:text="Barcode"
+                android:textSize="18sp" />
+
 
             <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="3"
-                android:orientation="vertical">
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:baselineAligned="true"
+                android:orientation="horizontal">
 
-                <ImageView
-                    android:id="@+id/ivItemImage2"
-                    android:layout_width="match_parent"
+                <LinearLayout
+                    android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    app:srcCompat="@drawable/request_completed" />
+                    android:layout_weight="3"
+                    android:orientation="vertical">
+
+                    <ImageView
+                        android:id="@+id/ivItemImage2"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        app:srcCompat="@drawable/request_completed" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/textView500"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Request type"
+                        android:textColor="@color/purple_500" />
+
+                    <TextView
+                        android:id="@+id/tvItemReqType"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="TextView" />
+
+                    <TextView
+                        android:id="@+id/textView501"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Request Date"
+                        android:textColor="@color/purple_500" />
+
+                    <TextView
+                        android:id="@+id/tvItemReqDate"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="TextView" />
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_weight="4"
+                    android:orientation="vertical"
+                    android:padding="10dp">
+
+                    <TextView
+                        android:id="@+id/textView502"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Request No."
+                        android:textColor="@color/purple_500" />
+
+                    <TextView
+                        android:id="@+id/tvItemReqNo"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="TextView"
+                        android:textColor="@color/purple_500"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/textView503"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Status"
+                        android:textColor="@color/purple_500" />
+
+                    <TextView
+                        android:id="@+id/tvItemReqStatus"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="30dp"
+                        android:layout_marginBottom="10dp"
+                        android:text="TextView" />
+
+                </LinearLayout>
+
             </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <TextView
-                    android:id="@+id/textView500"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Request type"
-                    android:textColor="@color/purple_500" />
-
-                <TextView
-                    android:id="@+id/tvItemReqType"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="TextView" />
-
-                <TextView
-                    android:id="@+id/textView501"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Request Date"
-                    android:textColor="@color/purple_500" />
-
-                <TextView
-                    android:id="@+id/tvItemReqDate"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="TextView" />
-
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="wrap_content"
-                android:layout_height="match_parent"
-                android:layout_weight="4"
-                android:orientation="vertical"
-                android:padding="10dp">
-
-                <TextView
-                    android:id="@+id/textView502"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Request No."
-                    android:textColor="@color/purple_500" />
-
-                <TextView
-                    android:id="@+id/tvItemReqNo"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="TextView"
-                    android:textColor="@color/purple_500"
-                    android:textStyle="bold" />
-
-                <TextView
-                    android:id="@+id/textView503"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Status"
-                    android:textColor="@color/purple_500" />
-
-                <TextView
-                    android:id="@+id/tvItemReqStatus"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="30dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="TextView" />
-
-            </LinearLayout>
-
         </LinearLayout>
+
     </androidx.cardview.widget.CardView>
 
 </LinearLayout>
