--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -83,6 +83,13 @@
         android:textColor="@color/design_default_color_error"
         android:textSize="16sp" />
 
+    <ProgressBar
+        android:id="@+id/pbLogin"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        tools:visibility="invisible" />
+
     <TextView
         android:id="@+id/tv12"
         android:layout_width="match_parent"
